chore(package): fix main in package.json and release v10.0.0! (#22)

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "bin": {
     "webdriver-manager": "bin/webdriver-manager"
   },
-  "main": "bin/webdriver-manager",
+  "main": "built/lib/webdriver.js",
   "author": "Craig Nishina <craig.nishina@gmail.com>",
   "license": "MIT",
   "dependencies": {
