--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
   "dependencies": {
     "adm-zip": "^0.4.7",
     "chalk": "^1.1.1",
+    "del": "^2.2.0",
+    "glob": "^7.0.3",
+    "ini": "^1.3.4",
     "minimist": "^1.2.0",
     "q": "^1.4.1",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "rimraf": "^2.5.2"
   },
   "devDependencies": {
     "clang-format": "^1.0.35",
