--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,6 @@
   "exclude": [
     "built",
     "node_modules",
-    "typings/browser",
-    "typings/browser.d.ts",
-    "typings/main"
+    "typings/globals"
   ]
 }
