--- a/config.json
+++ b/config.json
@@ -3,7 +3,8 @@
     "selenium": "2.53.0",
     "chromedriver": "2.21",
     "iedriver": "2.53.1",
-    "androidsdk": "24.4.1"
+    "androidsdk": "24.4.1",
+    "appium": "1.5.3"
   },
   "cdnUrls": {
     "selenium": "https://selenium-release.storage.googleapis.com/",
