--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "protractor",
     "webdriver",
     "webdriverjs",
-    "selenium"
+    "selenium",
+    "selenium-webdriver"
   ],
   "repository": {
     "type": "git",
@@ -37,12 +38,23 @@
     "rimraf": "^2.5.2"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.4.29",
+    "@types/chalk": "^0.4.28",
+    "@types/form-data": "0.0.30",
+    "@types/glob": "^5.0.29",
+    "@types/ini": "^1.3.28",
+    "@types/jasmine": "^2.2.32",
+    "@types/minimatch": "^2.0.28",
+    "@types/minimist": "^1.1.28",
+    "@types/node": "^6.0.37",
+    "@types/q": "0.0.29",
+    "@types/request": "0.0.29",
+    "@types/rimraf": "0.0.27",
     "clang-format": "^1.0.35",
     "gulp": "^3.9.1",
     "gulp-clang-format": "^1.0.23",
     "jasmine": "^2.4.1",
     "run-sequence": "^1.1.5",
-    "typescript": "^1.8.7",
-    "typings": "^1.0.4"
+    "typescript": "^2.0.0"
   }
 }
