fix(chrome_driver): use the x64 binary if chrome driver version is greater than 2.23 (#95)
* fix(chrome_driver): use the x64 binary if chrome driver version is greater than 2.23

Closes #93

Signed-off-by: Will Soto <will.soto9@gmail.com>

* fix(chrome_driver): add semver to better determine version number

Signed-off-by: Will Soto <will.soto9@gmail.com>

* refactor(chrome_driver): check first to see if we have valid semver or not

Signed-off-by: Will Soto <will.soto9@gmail.com>

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "minimist": "^1.2.0",
     "q": "^1.4.1",
     "request": "^2.69.0",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "semver": "^5.3.0"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.29",
@@ -50,6 +51,7 @@
     "@types/q": "0.0.29",
     "@types/request": "0.0.29",
     "@types/rimraf": "0.0.27",
+    "@types/semver": "^5.3.30",
     "clang-format": "^1.0.35",
     "gulp": "^3.9.1",
     "gulp-clang-format": "^1.0.23",
