--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webdriver-manager",
-  "version": "10.2.3",
+  "version": "10.2.4",
   "description": "A selenium server and browser driver manager for your end to end tests.",
   "scripts": {
     "prepublish": "gulp prepublish",
@@ -41,16 +41,16 @@
   "devDependencies": {
     "@types/adm-zip": "^0.4.29",
     "@types/chalk": "^0.4.28",
-    "@types/form-data": "0.0.30",
+    "@types/form-data": "^0.0.32",
     "@types/glob": "^5.0.29",
     "@types/ini": "^1.3.28",
     "@types/jasmine": "^2.2.32",
     "@types/minimatch": "^2.0.28",
     "@types/minimist": "^1.1.28",
     "@types/node": "^6.0.37",
-    "@types/q": "0.0.29",
-    "@types/request": "0.0.29",
-    "@types/rimraf": "0.0.27",
+    "@types/q": "^0.0.32",
+    "@types/request": "^0.0.31",
+    "@types/rimraf": "^0.0.28",
     "@types/semver": "^5.3.30",
     "clang-format": "^1.0.35",
     "gulp": "^3.9.1",
