chore(project): upgrade dependencies, enforce format in travis (#138)
chore(project): upgrade dependencies, enforce format in travis

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "declaration": true,
     "removeComments": false,
     "noImplicitAny": true,
-    "outDir": "built/"
+    "outDir": "built/",
+    "types": [
+      "adm-zip", "chalk", "glob", "jasmine", "minimist",
+      "node", "q", "request", "rimraf", "semver"
+    ]
   },
   "exclude": [
     "built",
