--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "10.2.7",
   "description": "A selenium server and browser driver manager for your end to end tests.",
   "scripts": {
+    "check_format": "gulp format:enforce",
+    "format": "gulp format",
     "prepublish": "gulp prepublish",
     "test": "gulp test"
   },
@@ -34,7 +36,7 @@
     "ini": "^1.3.4",
     "minimist": "^1.2.0",
     "q": "^1.4.1",
-    "request": "^2.69.0",
+    "request": "^2.78.0",
     "rimraf": "^2.5.2",
     "semver": "^5.3.0"
   },
@@ -44,12 +46,12 @@
     "@types/form-data": "^0.0.32",
     "@types/glob": "^5.0.29",
     "@types/ini": "^1.3.28",
-    "@types/jasmine": "^2.2.32",
+    "@types/jasmine": "^2.5.37",
     "@types/minimatch": "^2.0.28",
     "@types/minimist": "^1.1.28",
-    "@types/node": "^6.0.37",
+    "@types/node": "^6.0.46",
     "@types/q": "^0.0.32",
-    "@types/request": "^0.0.32",
+    "@types/request": "^0.0.33",
     "@types/rimraf": "^0.0.28",
     "@types/semver": "^5.3.30",
     "clang-format": "^1.0.35",
@@ -57,6 +59,6 @@
     "gulp-clang-format": "^1.0.23",
     "jasmine": "^2.4.1",
     "run-sequence": "^1.1.5",
-    "typescript": "^2.0.0"
+    "typescript": "^2.1.1"
   }
 }
