--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
@@ -10,7 +10,7 @@
     "outDir": "built/",
     "types": [
       "adm-zip", "chalk", "glob", "jasmine", "minimist",
-      "node", "q", "request", "rimraf", "semver", "es6-promise"
+      "node", "q", "request", "rimraf", "semver"
     ]
   },
   "exclude": [
