feat(update): on update, write full binary paths to file (#140)
- Adding back in curl calls, these were removed on the new
  `Downloader.getFile`. Add curl call to reflect proxies.

- Fix output dir to read from update's options instead of Config

- Feature will help directConnect users for Protractor. The file
  will keep track of the last binary version as well as all other
  binaries downloaded.

  The file will be created in the output directory. By default this is
  `selenium/update-config.json`. On `clean` this file will be removed.

  ```
  webdriver-manager update --versions.chrome=2.20 --standalone=false
  --gecko=false
  ```

  file created:
  ```
  {
    "chrome": {
      "last": "/opt/src/webdriver-manager/selenium/chromedriver_2.20",
      "all": ["/opt/src/webdriver-manager/selenium/chromedriver_2.20"]
    }
  }
  ```

  then the user wants to use 2.25:

  ```
  webdriver-manager update --versions.chrome=2.25 --standalone=false
  --gecko=false

  ```

  file created:
  ```
  {
    "chrome": {
      "last": "/opt/src/webdriver-manager/selenium/chromedriver_2.25",
      "all": ["/opt/src/webdriver-manager/selenium/chromedriver_2.20",
              "/opt/src/webdriver-manager/selenium/chromedriver_2.25"]
    }
  }
  ```

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "format": "gulp format",
     "prepublish": "gulp prepublish",
     "test": "gulp test",
+    "test_unit": "gulp test:unit",
     "test_travis": "gulp test:headless"
   },
   "keywords": [
