--- a/package.json
+++ b/package.json
@@ -63,5 +63,9 @@
     "run-sequence": "^1.1.5",
     "selenium-webdriver": "2.53.1",
     "typescript": "^2.1.1"
+  },
+  "engines": {
+    "node": ">=4",
+    "npm": ">=3"
   }
 }
