chore(e2e tests): support some e2e tests on circle ci (#168)
Sadly, x86 emulation is impossible (no hardware extensions on circle) and arm is
unworkably slow, so no android tests.  See
https://github.com/angular/webdriver-manager/issues/167 for ideas about work
arounds

Removed travis tests since circle tests are cooler anyway

Made some timeouts longer because I guess circle is slow.  Also improved some
an error path in downloader because it was a problem while debugging.

Sample output: https://circleci.com/gh/sjelin/webdriver-manager/31

Closes https://github.com/angular/webdriver-manager/issues/165

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prepublish": "gulp prepublish",
     "test": "gulp test",
     "test_unit": "gulp test:unit",
-    "test_travis": "gulp test:headless"
+    "test_circle_e2e": "gulp test:e2e:no_kvm"
   },
   "keywords": [
     "angular",
@@ -64,5 +64,8 @@
     "run-sequence": "^1.1.5",
     "selenium-webdriver": "2.53.1",
     "typescript": "^2.1.1"
+  },
+  "engines": {
+    "node": ">=6.0.0"
   }
 }
