--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@types/minimist": "^1.1.28",
     "@types/node": "^6.0.46",
     "@types/q": "^0.0.32",
-    "@types/request": "^0.0.36",
+    "@types/request": "^0.0.39",
     "@types/rimraf": "^0.0.28",
     "@types/selenium-webdriver": "^2.53.35",
     "@types/semver": "^5.3.30",
@@ -62,7 +62,7 @@
     "gulp-clang-format": "^1.0.23",
     "jasmine": "^2.4.1",
     "run-sequence": "^1.1.5",
-    "selenium-webdriver": "2.53.1",
+    "selenium-webdriver": "~3.0.1",
     "typescript": "^2.1.1"
   },
   "engines": {
