chore(circleci): install latest Chrome on CircleCI (#191)

--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,12 @@ machine:
   node:
     version: 6.1.0
 
+dependencies:
+  post:
+    # Install latest Chrome
+    - curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+    - sudo dpkg -i google-chrome.deb
+
 test:
   override:
     - npm run check_format
