--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "q": "^1.4.1",
     "request": "^2.78.0",
     "rimraf": "^2.5.2",
-    "semver": "^5.3.0"
+    "semver": "^5.3.0",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.29",
@@ -57,6 +58,7 @@
     "@types/rimraf": "^0.0.28",
     "@types/selenium-webdriver": "^2.53.35",
     "@types/semver": "^5.3.30",
+    "@types/xml2js": "0.0.32",
     "clang-format": "^1.0.35",
     "gulp": "^3.9.1",
     "gulp-clang-format": "^1.0.23",
