chore(circleci): remove e2e tests from circle ci (#278)
- Run only unit tests
- Clean up the gulp tasks
- Remove e2e tests that bring up a browser. These tests should be
simplified to something like:
  - Update e2e: The e2e test should verify binaries are downloaded
  - Start e2e: A java process is running and ports are being used

closes #277

--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
     - curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
     - sudo dpkg -i google-chrome.deb
 
-  override: 
+  override:
     # Install latest Firefox
     # https://discuss.circleci.com/t/installing-the-latest-version-of-firefox-in-circleci/1347
     - pip install mozdownload mozinstall
@@ -20,6 +20,5 @@ dependencies:
 
 test:
   override:
-    - npm run check_format
-    - npm run test_unit
-    - npm run test_circle_e2e
+    - npm run format-enforce
+    - npm run test-unit
