--- a/package.json
+++ b/package.json
@@ -15,5 +15,17 @@
   "bugs": {
     "url": "https://github.com/cnishina/webderpy-manager/issues"
   },
-  "homepage": "https://github.com/cnishina/webderpy-manager#readme"
+  "homepage": "https://github.com/cnishina/webderpy-manager#readme",
+  "dependencies": {
+    "request": "^2.87.0",
+    "xml2js": "^0.4.19"
+  },
+  "devDependencies": {
+    "@types/jasmine": "^2.8.8",
+    "@types/node": "^10.3.3",
+    "@types/request": "^2.47.0",
+    "@types/xml2js": "^0.4.3",
+    "jasmine": "^3.1.0",
+    "typescript": "^2.9.2"
+  }
 }
