chore(downloader): add xml download support
- add xml utils to download and write files
- add unit tests to read xml files and convert xml to js
- add integration test to request an xml file from a local server
- add html utils to help build request options based on env vars
- add unit tests for html utils
- edit scripts in package.json for testing

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "not the webdriver manager cli",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "http-server": "tsc && node dist/spec/server/http_server.js",
+    "jasmine": "jasmine",
+    "test-int": "tsc && jasmine JASMINE_CONFIG_PATH=spec/support/jasmine-int.json",
+    "test-unit": "tsc && jasmine JASMINE_CONFIG_PATH=spec/support/jasmine-unit.json",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
