--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@types/jasmine": "^2.8.8",
     "@types/node": "^10.3.3",
     "@types/request": "^2.47.0",
+    "@types/rimraf": "^2.0.2",
     "@types/semver": "^5.5.0",
     "@types/xml2js": "^0.4.3",
     "jasmine": "^3.1.0",
+    "rimraf": "^2.6.2",
     "typescript": "^2.9.2"
   }
 }
