--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webderpy-manager",
+  "name": "webdriver-manager",
   "version": "0.0.0",
-  "description": "not the webdriver manager cli",
+  "description": "not the webdriver-manager cli",
   "main": "index.js",
   "scripts": {
     "http-server": "tsc && node dist/spec/server/http_server.js",
