chore(package): update package name to be webdriver-manager-replacement

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webdriver-manager",
+  "name": "webdriver-manager-replacement",
   "version": "0.0.0",
   "description": "not the webdriver-manager cli",
   "main": "dist/lib/index.js",
